syntax = "proto3";
package stride.ratelimit;

import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v5/x/ratelimit/types";

message AddRateLimitProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string denom = 3;
  string channel_id = 4;
  string max_percent_send = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string max_percent_recv = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 duration_hours = 7;
  string deposit = 8 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];
}

message UpdateRateLimitProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string denom = 3;
  string channel_id = 4;
  string max_percent_send = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string max_percent_recv = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 duration_hours = 7;
  string deposit = 8 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];
}

message RemoveRateLimitProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string denom = 3;
  string channel_id = 4;
  string deposit = 5 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];
}

message ResetRateLimitProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string denom = 3;
  string channel_id = 4;
  string deposit = 5 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];
}
